Some more instructions in Readme

--- a/README
+++ b/README
@@ -1,6 +1,11 @@
 Scan the local network and check in whoever is there
 
 You'll need
+ - a machine connected to the local office network to run this
+ - to configure a Slack incoming webhook
+ - some sort of people check in system in place
+ 
+Server requirements:
  - nmap
  - jq
 
